objects/ACROBj1__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>ACROBj1</label>
    <nameField>
        <label>ACROBj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACROBj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>